--- a/public/assets/css/nexus.css
+++ b/public/assets/css/nexus.css
@@ -2953,3 +2953,50 @@ ul.posts-list li {
   min-height: 40px;
   text-align: center;
 }
+
+
+
+  /*--------------------------------Search------------------------------*/
+.search{
+  margin-top:60px;
+}
+
+.search h2{
+  color:#fff !important;
+  padding-bottom: 1.5px;
+  margin-left: 0;
+  font-size: 
+
+}
+
+ #search-input{
+    padding: 3px;
+    border: solid 1px #E4E4E4;
+    border-radius: 6px;
+    background-color: #fff;
+}
+
+#search-input input{
+    border: 0;
+    box-shadow: none;
+}
+
+#search-input button{
+    margin: 2px 0 0 0;
+    background: none;
+    box-shadow: none;
+    border: 0;
+    color: #666666;
+    padding: 0 8px 0 10px;
+    border-left: solid 1px #ccc;
+}
+
+#search-input button:hover{
+    border: 0;
+    box-shadow: none;
+    border-left: solid 1px #ccc;
+}
+
+#search-input .glyphicon-search{
+    font-size: 23px;
+}
