--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -612,6 +612,13 @@ dd {
     margin-left: 180px;
   }
 }
+.panel{
+  display: none !important;
+}
+.panel-default{
+  display: none;
+}
+
 abbr[title],
 abbr[data-original-title] {
   cursor: help;
@@ -741,11 +748,15 @@ pre code {
     width: 980px;
   }
 }
+
+
+
 @media (min-width: 1200px) {
   .container {
     width: 1180px;
   }
 }
+
 .container-fluid {
   margin-right: auto;
   margin-left: auto;
@@ -4425,6 +4436,8 @@ a.thumbnail.active {
   margin-bottom: 20px;
   border: 1px solid transparent;
   border-radius: 5px;
+  font-weight: bold;
+  font-size: 2em;
 }
 .alert h4 {
   margin-top: 0;
@@ -4453,6 +4466,7 @@ a.thumbnail.active {
   background-color: #dff0d8;
   border-color: #d6e9c6;
   color: #3c763d;
+  
 }
 .alert-success hr {
   border-top-color: #c9e2b3;
@@ -4750,6 +4764,7 @@ a.list-group-item-danger.active:focus {
   line-height: 1.3;
 }
 .panel {
+  display: block;
   margin-bottom: 20px;
   background-color: #f4f4f4;
   border: 1px solid transparent;
@@ -4948,6 +4963,7 @@ a.list-group-item-danger.active:focus {
 }
 .panel-default {
   border-color: #d8d8d8;
+  display: block;
 }
 .panel-default > .panel-heading {
   color: #333333;
@@ -5743,20 +5759,33 @@ button.close {
     display: none !important;
   }
 }
+.panel-default{
+  display: none;
+}
+
 @media (min-width: 768px) and (max-width: 991px) {
   .hidden-sm {
     display: none !important;
   }
+}
+.panel-default{
+  display: none;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .hidden-md {
     display: none !important;
   }
 }
+.panel-default{
+  display:block;
+}
 @media (min-width: 1200px) {
   .hidden-lg {
     display: none !important;
   }
+}
+.panel-default{
+  display: block !important;
 }
 .visible-print {
   display: none !important;
