--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,7 +1,26 @@
+@media only screen and (max-width: 2560px) {
+
+/*#hornav,.navbar-nav {
+	
+	display: block !important;		
+}*/
+
+/*#hornavmenu{
+	text-align: center;
+
+}*/
+
+}
+
+
+
+
+
 /* #Tablet (Landscape)
 ================================================== */
 
 @media only screen and (max-width: 1080px) {
+
 
 /* Disable CSS animations */
 .animated {
@@ -16,6 +35,31 @@
     background-position: 50% 0 !important;
 }
 
+.grid-image img{
+	width: 285px;
+	height: 190px !important;
+}
+
+
+
+}
+
+@media only screen and (max-width: 1024px) {
+
+#hornav,.navbar-nav {
+	
+	display: block !important;
+	text-align: center;
+    
+		
+}
+
+.logo,h1{
+	font-size: 0.7em;
+}
+
+
+
 }
 
 /* #Tablet (Portrait)
@@ -23,19 +67,65 @@
     
 @media only screen and (max-width: 959px) {
 
+#hornav,.navbar-nav {
+	
+	display: none !important;
+	text-align: center;
+    
+		
+}
+
+.logo,h1{
+	font-size: 0.7em;
+}
+
+
+.grid-image img{
+	width: 245px;
+	height: 190px;
+}
+
 
 }
 
 /* #Mobile (Landscape)
 ================================================== */
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
+
+#hornav,.navbar-nav {
+	display: none !important;
+		
+}
+
+.logo,h1{
+	font-size: 0.7em;
+}
+
 
 .carousel-control.right span, .carousel-control.icon-next span {
     right: 20%;
 }
 .carousel-control.left span, .carousel-control.icon-prev span {
     left: 15%;
+}
+
+.login-header h2{
+	font-size: 1em;
+}
+
+.login-page .btn{
+	margin: 0;
+	padding: 4px 8px 4px 8px;
+	font-size: 13px;
+}
+
+.signup-header h2{
+	font-size: 1.6em;
+}
+
+.blog-post-body h2{
+	font-size: 1.7em;
 }
 
 }
@@ -57,7 +147,6 @@
 	h2.article-title{
 		font-size: 2.4em;
 	}
-
 
 
 }
